client/src/index.css
html, body {
  height: 100%;
  background-color:  #dddddd;
  color: #555555;

  font: 16px "Century Gothic", Futura, sans-serif;
  margin: 0;

  -webkit-touch-callout: none; /* iOS Safari */
  -webkit-user-select: none; /* Safari */
   -khtml-user-select: none; /* Konqueror HTML */
     -moz-user-select: none; /* Firefox */
      -ms-user-select: none; /* Internet Explorer/Edge */
          user-select: none; /* Non-prefixed version, currently
                                supported by Chrome and Opera */
}

.loginError {
  color: red;
}

/* display defining the SPA-style menu, and lower-right work area */
.parent {
  display: flex;
  flex-direction: column;

  height: 100%;
}
.menubar 
{
  background-color: #cccccc;
  padding: 7px;
  text-align: right;

  z-index: 10;
}
.menubarNameplate {
  font-weight: bold;
  color: #0787FF;
}
.bottom {
  display: flex;
  flex-direction: row;
  flex-grow: 1;
}
.clientArea {
  display: flex;
  flex-direction: column;

  flex-grow: 1;

  padding: 4px;

  overflow-y: auto;
}
.lightUIPadding {
  padding: 4px;
}
.heavyUIPadding {
  padding: 6px;
}
.vertFill {
  height: 100%;
}
.centerText {
  text-align: center;
}
.vertCenterParent {
  display: flex;
  justify-content: center;
  align-items: center;
}
.bigButton {
  font: 14px "Century Gothic", Futura, sans-serif;

  background-color: white; 
  color: black; 
  border: 2px solid #222222;
  border-radius: 8px;
  padding: 16px 32px;
  width: 150px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  margin: 4px 2px;
  -webkit-transition-duration: 0.4s; /* Safari */
  transition-duration: 0.4s;
  cursor: pointer;

  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12)
}
.bigButton:hover:not([disabled]) {
  background-color: #555555;
  color: white;  
}
.bigButton:disabled {
  border: 2px solid #aaaaaa;
  color: #aaaaaa;
  cursor: default;
}
.smallButton {
  font: 14px "Century Gothic", Futura, sans-serif;

  background-color: white; 
  color: black; 
  border: 2px solid #222222;
  border-radius: 8px;
  padding: 12px 12px;
  width: 120px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  margin: 4px 2px;
  -webkit-transition-duration: 0.4s; /* Safari */
  transition-duration: 0.4s;
  cursor: pointer;

  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12)
}
.smallButton:hover:not([disabled]) {
  background-color: #555555;
  color: white;  
}
.smallButton:disabled {
  border: 2px solid #aaaaaa;
  color: #aaaaaa;
  cursor: default;
}
.version {
  text-align: center;
  font-size: 12px;
}

hr {
  margin: 0px;
}

.title {
  font: 50px "Century Gothic", Futura, sans-serif;
}
.titleParent {
  padding: 30px;
}

/* NavBar */
.sideNav {
  box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 2px 2px;
  background-color: #cccccc;
}
.sideNavList {
  margin: 0;
  padding: 1px;
}
.sideNavList a {
  display: block;
  padding: 10px;
  color: black;
  transition-duration: 0.4s;
  -webkit-transition-duration: 0.4s; /* Safari */
}
.sideNavList a {
  transition-duration: 0.4s;
  -webkit-transition-duration: 0.4s; /* Safari */

  text-decoration: none;
}
.sideNavList a:hover {
  color: white;
  background-color: #555555;
}
.sideNavList a:active {
  color: white;
  background-color: #222222;
}
.sideNavListCurrentItem {
  background-color: #111111;
}

/* GameBoard */
.board {
  display: inline-flex;
  flex-direction: column;

  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);

  margin: 3px;
}
.boardrow {
  display: flex;
  flex-direction: row;
  justify-content: center;
}
.tile {
}
.draggable {
  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 1px 0px;

  -webkit-transition: transform 0.5s, box-shadow 0.5s;
  transition: transform 0.5s, box-shadow 0.5s;
}
.draggableInMotion {
  box-shadow: rgba(0, 0, 0, 0.3) 5px 5px 5px 0px;
  z-index: 10;
}
.palette {
  display: flex;
  flex-direction: row;

  background-color: white;
  margin: 20px;
  padding: 20px;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
}
.palette > .tile {
  margin: 10px;
}

/* Voting */
.voteButton {
  background-color: #f1f1f1;
  border: 1px solid #222222;
  border-radius: 8px;
  text-align: center;

  margin: 4px;
  padding: 5px;
  cursor: pointer;
  outline: none;

  -webkit-transition-duration: 0.4s;
  transition-duration: 0.4s;

  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12)
}
.voteButton:hover {
  background-color: #cccccc;
}
.voteButton:active {
  background-color: #bbbbbb;

  transform: translateY(4px);
}

/* shared */
.gamesPlaque {
  background-color: #f1f1f1;
  margin: 10px;
  padding: 10px;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12)
}
.gamesPlaqueLabel {
  /*font: 16px "Roboto", Futura, sans-serif;*/
}

/* MyGames */
.gamesParent {
  display: flex;
  flex-flow: row wrap;
}
.myGamesEntry {
  background-color: #f1f1f1;

  border: none;
  border-radius: 4px;
  margin: 1px;
  padding: 5px;

  -webkit-transition-duration: 0.4s;
  transition-duration: 0.4s;
}
.myGamesEntry:hover {
  color: white;
  background-color: #bbbbbb;
}
.myGamesEntry:active {
  background-color: #777777;
  transform: translateY(4px);
}
.boardParent {
  display:flex;
  flex-flow: column;
  align-items: center;
}

/* Leaderboard */
.leaderboardParent {
  font-size: 20px;
}
.leaderboardRank {
  font-size: 24px;
  text-align: right;
  min-width: 35px;
  padding-right: 5px;
}
.leaderboardEntry {
  display: flex;
  flex-flow: row;
  align-items: center;

  border: 1px solid #ffffff77;
  margin: 5px;
  padding: 5px;
}
.leaderboardEntryInfo {
  padding-left: 5px;
}
.leaderboardEntryField {
  font-weight: bold;
}

